<resources>
    <string name="app_name">Vinit_Android_Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_message">I\'m a button</string>
    <string name="hinttext">Write something here</string>
    <string name="checkbox_message">Do you drink coffee</string>
    <string name="switch_message">Do you drink coffee</string>
    <string name="radiobutton_message">Do you drink coffee</string>
</resources>